[tool.poetry]
name = "myhcp"
version = "0.1.0"
description = ""
authors = ["Léo Grosjean <leo.grosjean@live.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
biopython = "^1.79"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
